src/test/examples/custom/invalid/semanticErr/class/wrongClassType.wacc
# Classes cannot be assigned to a different class type

begin
  class H is 
    private int v
    private int J(int z) is 
      return 0
    end
  end
  class K is 
    private int v
    private int J(int z) is 
      return 0
    end
  end
  K p = new H(2) 
end